--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer el blogpost</h1>
-    <p>Este es el parrafo de inicio</p>
+    <div id="container">
+        <h1>Aqui vamos a hacer el blogpost</h1>
+        <p>Este es el parrafo de inicio</p>
+    </div>
 </body>
 </html>
