--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <h1>Aqui vamos a hacer el blogpost</h1>
         <p>Este es el parrafo de inicio</p>
     </div>
