Finalizada la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Cabecera
+            Tu super Blog
         </div>
         <h1>Aqui vamos a hacer el blogpost</h1>
         <p>Este es el parrafo de inicio</p>
