--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
     <div id="container">
         <h1>Aqui vamos a hacer el blogpost</h1>
         <p>Este es el parrafo de inicio</p>
+        <p>Este blog esta muy bueno</p>
     </div>
 </body>
 </html>
